Fix Overlapping Project Cards Based Caused by Text Size

--- a/src/style.css
+++ b/src/style.css
@@ -232,7 +232,7 @@ p {
 
 [class^="card-"] {
     border: 2px solid black;
-    height: 25rem;
+    height: min-content;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1.5fr 1fr;
